[15-Mar-2016]
* [MMR] Added utility functions to process file based supplier invoice
* [SI] Added cost details modal template

[14-Mar-2016]
* [SI] Reconcile/unreconcile job cost line

[18-Feb-2016]
* [SI] Added template and css for reconciliation

[15-Feb-2016]
* [SI] Project created